--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: With high probability
-email: sdavie2@uic.edu
-description: > # this means to ignore newlines until "baseurl:"
-  A place for math, computer science, and other things I find interesting
+title: Sami Davies
+email: daviess@uw.edu
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://samidavies.github.io" # the base hostname & protocol for your site
 github_username:  samidavies
