--- a/_config.yml
+++ b/_config.yml
@@ -12,5 +12,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://samidavies.github.io" # the base hostname & protocol for your site
 github_username:  samidavies
 
+collections:
+  bib:
+    output: true
+
 # Build settings
 markdown: kramdown
