--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -22,3 +22,11 @@ Cyrus:
 Miki:
   name: "Miklos Z. Racz"
   webpage: "https://mracz.princeton.edu"
+
+Janardhan:
+  name: "Janardhan Kulkarni"
+  webpage: "https://www.microsoft.com/en-us/research/people/jakul/"
+
+Jakub: 
+  name: "Jakub Tarnawski"
+  webpage: "http://jakub.tarnawski.org"
