new paper and SODA entry

--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -37,3 +37,11 @@ Ben:
 Sai: 
   name: "Sai Sandeep"
   webpage: "https://spallerl.github.io"
+
+Arya: 
+  name: "Arya Mazumdar"
+  webpage: "http://mazumdar.ucsd.edu"
+
+Soumyabrata: 
+  name: "Soumyabrata Pal"
+  webpage: "https://soumyabratap.github.io"
