new paper and posts

--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -45,3 +45,10 @@ Arya:
 Soumyabrata: 
   name: "Soumyabrata Pal"
   webpage: "https://soumyabratap.github.io"
+
+Samir: 
+  name: "Samir Khuller"
+  webpage: "https://www.samirkhuller.com"
+
+Shirley: 
+  name: "Shirley Zhang"
