--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Sami Davies
-email: daviess@uw.edu
+title: Sharmila Duppala
+email: sduppala@umd.edu
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://samidavies.github.io" # the base hostname & protocol for your site
-github_username:  samidavies
+url: "http://trinity24.github.io" # the base hostname & protocol for your site
+github_username:  trinity24
 
 collections:
   bib:
