--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -9,7 +9,7 @@ seyed:
   webpage: "https://sa-esmaeili.github.io/" 
 
 john:
-  name: "John Dickerson"
+  name: "John P. Dickerson"
   webpage: "http://jpdickerson.com/" 
 
 rezaul:
@@ -48,7 +48,7 @@ jayson:
   webpage: "https://scholar.google.com/citations?user=vGN58VQAAAAJ&hl=en"
 
 estie: 
-  name: "Esther Arkin"
+  name: "Esther M. Arkin"
   webpage: "https://scholar.google.com/citations?user=SBfvewoAAAAJ&hl=en&oi=ao"
 
 shihyu: 
