--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -61,6 +61,9 @@ zafar:
   name: "Zafar Ahmed"
   webpage: "https://www3.cs.stonybrook.edu/~zafahmad/"
 
+dcheng:
+  name: "Davidson Cheng"
+
 rathish:
   name: "Rathish Das"
   webpage: "https://cs.uwaterloo.ca/~r27das/"
