Made changes to cv and added new papers

--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -9,6 +9,17 @@ seyed:
   name: "Seyed Esmaeili"
   webpage: "https://sa-esmaeili.github.io/" 
 
+georgeli:
+  name: "George Z. Li"
+  webpage: "https://sites.google.com/view/gzli929/home"
+
+renata:
+  name: "Renata Valieva"
+  webpage: "https://www.linkedin.com/in/renata-valieva-5aba54219"
+
+nateg:
+  name: "Nathaniel Grammel"
+
 john:
   name: "John P. Dickerson"
   webpage: "http://jpdickerson.com/" 
