--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -1,6 +1,10 @@
 sduppala:
   name: "Sharmila Duppala"
 
+calum:
+  name: "Calum MacRury"
+  webpage: "https://cmacrury.github.io/"
+
 aravind:
   name: "Aravind Srinivasan"
   webpage: "https://www.cs.umd.edu/~srin/"
