--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -10,7 +10,7 @@ aravind:
   webpage: "https://www.cs.umd.edu/~srin/"
 
 seyed:
-  name: "Seyed Esmaeili"
+  name: "Seyed A. Esmaeili"
   webpage: "https://sa-esmaeili.github.io/" 
 
 georgeli:
